# tacticsgame

./: .gitignore  CLAUDE.md  LICENSE  pyproject.toml
docs/: 00_project_vision.md  01_architecture_setup.md  02_phase1_definition.md  03_phase2a_definition.md  04_phase2b_definition.md  05_workorder_variance_and_differentiation.md  06_phase3_resolution_definition.md  07_phase4a_definition.md  08_patch_scale_invariant_contest_roll.md  09_phase3_unblock_notes.md  10_phase3_proceed_to_damage_sweeps.md  11_phase3_attacker_advantage_and_corrections.md  phase3_attacker_advantage_span.md  phase3_contest_simulation.md  phase3_scale_invariant_comparison.md  phase3_step7_measurements.md  progress_update.md
docs/adr/: 0001-ability-data-yaml-refactor.md  0002-legal-action-query-api.md  0003-track1-per-battle-xp-and-downed-state.md  0004-session-battle-chaining.md  0005-player-input-in-the-visualizer.md  0006-roster-and-squad-selection.md  0007-manual-attribute-allocation.md  0008-between-battle-screen.md  0009-synthesis-variance-dirichlet-concentration.md  0010-ability-differentiation-and-resolve-scaling.md  (+2 more)
scripts/: measure_telemetry.py  phase3_step7_measure.py  run_experiments.py  sim_contest.py  simulate_contests.py
tests/: test_ability_library.py  test_ai.py  test_ai_vs_ai_baseline.py  test_battle.py  test_between_battle_screen.py  test_class_track_library.py  test_hero_delta.py  test_player_input.py  test_progression.py  test_queries.py  test_renderer_helpers.py  test_renderer_player_input.py  test_resolution.py  test_roster.py  test_session.py  test_telemetry.py
(+26 files in other folders)
