[project]
name = "tactics-game"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dmitry Mogilevsky", email = "dmitry.mogilevsky@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
tactics-game = "tactics_game.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ty>=0.0.59",
    "types-pyyaml>=6.0.12.20260518",
]
